--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -35,9 +35,12 @@
 // Blue versions:
 // @active-button: #0f82fe;
 // @pressed-button: #00baff;
-@link-color: black;
+@cancel-button: #7e7e7e;
+@pressed-cancel-button: #c9c9ce;
 @delete-button: #e22c09;
 @pressed-delete-button: #f86f55;
+@link-color: black;
+
 
 // Components
 @plus-button-width: 27px;
