--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
@@ -2,9 +2,7 @@
 
   <div class="form-group">
     <label class="sr-only" for="taskTitle">title</label>
-    <div class="col-lg-10">
-      <input type="text" class="form-control em-simple-input" id="taskTitle" ng-model="task.title" placeholder="title..." required>
-    </div>
+    <input type="text" class="simple-input" id="taskTitle" ng-model="task.title" placeholder="title..." required>
   </div>
 
   <div ng-switch="showDate">
@@ -17,9 +15,7 @@
       <div class="form-group">
         <label for="taskDue" class="sr-only">select date...</label>
         <div class="col-lg-10">
-
-          <input type="date" id="taskDue" class="form-control em-simple-input" ng-model="task.due" date>
-
+          <input type="date" id="taskDue" class="simple-input" ng-model="task.due" date>
         </div>
       </div>
     </div>
@@ -27,35 +23,30 @@
 
   <div class="form-group">
     <label class="sr-only" for="taskParent">parent</label>
-    <div class="col-lg-10">
-      <select class="form-control em-simple-input" id="taskParent" ng-model="task.relationships.parentTask" ng-options="project.uuid as project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
-        <option value="">select project...</option>
-      </select>
-    </div>
+    <select class="simple-input" id="taskParent" ng-model="task.relationships.parentTask" ng-options="project.uuid as project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
+      <option value="">select project...</option>
+    </select>
   </div>
 
   <div class="form-group">
     <label class="sr-only" for="taskContext">context</label>
-    <div class="col-lg-10">
-      <select class="form-control em-simple-input" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
-        <option value="">select context...</option>
-      </select>
-    </div>
+    <select class="simple-input" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts" ng-hide="task.project">
+      <option value="">select context...</option>
+    </select>
   </div>
 
   <div class="form-group">
-    <label class="sr-only" for="taskLink">link</label>
-    <div class="col-lg-10">
-      <input type="text" class="form-control em-simple-input" id="taskLink" ng-model="task.link" placeholder="link..." ng-hide="task.project">
-    </div>
+    <label class="sr-only" for="taskLink">url</label>
+    <input type="text" class="simple-input" id="taskLink" ng-model="task.link" placeholder="url..." ng-hide="task.project">
   </div>
 
-  <div class="form-group">
-    <div class="col-lg-10">
-      <button type="submit" class="btn btn-default" ng-disabled="!taskEdit.$valid" ng-click="editTask()">
-        save
-      </button>
-    </div>
+  <div class="form-group vertical-buttons">
+    <button type="submit" class="wide-button normal-button" ng-disabled="!taskEdit.$valid" ng-click="editTask()">
+      save
+    </button>
+    <button type="button" class="wide-button cancel-button" ng-click="cancelEdit()">cancel</button>
   </div>
 
 </form>
+
+
