Moved single tasks to the right place

--- a/frontend/core/src/main/webapp/static/partials/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/tasksSlides.html
@@ -8,7 +8,7 @@
       <div class="swiper-slide" projects></div>
       <!-- areas -->
       <!-- contexts -->
-      <!-- single tasks -->
+      <div class="swiper-slide" single-tasks></div>
     </div>
   </div>
   <footer ng-hide="mainlinksFilter" em-footer mainlinksfilter="newItem.title"></footer>
