Moved menu button little bit down

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -55,7 +55,7 @@ section#home {
     }
     button#menu-button{
       .button;
-      padding: 0 0 20px 20px !important; // increased clicking area
+      padding: 10px 0 10px 20px; // increased clicking area
     }
     button#menu-button:active{
       background-position: 0 0;
