Fixed feature header heading width

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -67,6 +67,15 @@ header {
 
 .feature-header {
   min-height: @feature-header-height;
+  .left-of-three {
+    width: 20%;
+  }
+  .right-of-three {
+    width: 20%;
+  }
+  .center-of-three {
+    width: 60%;
+  }
 }
 
 .heading-header {
