--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -104,7 +104,9 @@ header {
 }
 
 .simple-content-container{
-  padding-top: @heading-header-height;  
+  height: inherit;
+  padding-top: @heading-header-height;
+  overflow-y: auto;
 }
 
 .content-container {
