--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
@@ -8,21 +8,19 @@
   <div ng-switch="showDate">
 
     <div ng-switch-default>
-      <span class="em-span" ng-click="focusDate()">select date...</span>
+      <span class="input-placeholder" ng-click="focusDate()">select date...</span>
     </div>
 
     <div ng-switch-when="date">
       <div class="form-group">
         <label for="taskDue" class="sr-only">select date...</label>
-        <div class="col-lg-10">
-          <input type="date" id="taskDue" class="simple-input" ng-model="task.due" date>
-        </div>
+        <input type="date" id="taskDue" class="simple-input" ng-model="task.due" date>
       </div>
     </div>
   </div>
 
   <div class="form-group">
-    <label class="sr-only" for="taskParent">parent</label>
+    <label class="sr-only" for="taskParent">project</label>
     <select class="simple-input" id="taskParent" ng-model="task.relationships.parentTask" ng-options="project.uuid as project.title for project in tasks | tasksFilter:filterService.activeFilters.project" ng-hide="task.project">
       <option value="">select project...</option>
     </select>
