--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -200,38 +200,62 @@ button.delete-button {
 
 // CHECKBOXES
 
-input[type=checkbox].input-checkbox {
-  position: absolute; 
-  overflow: hidden; 
-  clip: rect(0 0 0 0);
-  height:1px; 
-  width:1px; 
-  margin:-1px; 
-  padding:0;
-  border:0;
+// input[type=checkbox].input-checkbox {
+//   position: absolute; 
+//   overflow: hidden; 
+//   clip: rect(0 0 0 0);
+//   height:1px; 
+//   width:1px; 
+//   margin:-1px; 
+//   padding:0;
+//   border:0;
+// }
+
+// input[type=checkbox].input-checkbox + .input-text {
+//   padding-left:35px;
+//   height:29px; 
+//   display:inline-block;
+//   line-height:29px;
+//   background-repeat:no-repeat;
+//   background-position: 0 0;
+//   vertical-align:middle;
+//   cursor:pointer;
+// }
+
+// input[type=checkbox].input-checkbox:checked + .input-text {
+//   background-position: 0 -79px;
+// }
+
+// input[type=checkbox].input-checkbox:checked ~ span.fade {
+//   color:@text-gray;
+//   .fade-color(0.1s);
+// }
+
+// .checkbox{background-image:url(../img/checkbox.png); }
+
+// Make labels clickable
+label {  
+  cursor: pointer;  
+ }  
+
+ // Never show default checkbox
+ input[type=checkbox] {
+   display:none;
 }
 
-input[type=checkbox].input-checkbox + .input-text {
-  padding-left:35px;
-  height:29px; 
-  display:inline-block;
-  line-height:29px;
-  background-repeat:no-repeat;
-  background-position: 0 0;
-  vertical-align:middle;
-  cursor:pointer;
+ input[type='checkbox'] + label:before {
+   font-family: 'icomoon';
+   font-size: 1.3em;
+   padding-right: 10px;
+ }
+
+input[type="checkbox"] + label:before {
+  content: "\e601";
 }
 
-input[type=checkbox].input-checkbox:checked + .input-text {
-  background-position: 0 -79px;
+input[type="checkbox"]:checked + label:before {
+  content: "\e602";
 }
-
-input[type=checkbox].input-checkbox:checked ~ span.fade {
-  color:@text-gray;
-  .fade-color(0.1s);
-}
-
-.checkbox{background-image:url(../img/checkbox.png); }
 
 // SELECTIONS
 
