right arrow (&gt;) fontified

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -5,7 +5,7 @@
 // Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 @default-font-size: 18px; 
-@slide-indicator-width: 5px;
+@slide-indicator-width: 0.5em;
 
 // Columns
 @one-column-grid-width: 480px;
