--- a/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
@@ -1,7 +1,7 @@
 <ul>
   <li ng-repeat="context in tags">
     <a class="click-to-slide" href="#/{{prefix}}/tasks/context/{{context.uuid}}">
-      <span class="link-title">@{{context.title}}</span><span class="slide-indicator">&gt;</span>
+      <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right" />
     </a>
   </li>
 </ul>
