--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -44,6 +44,7 @@
 }
 .icon-arrow-right:before {
 	content: "\e606";
+	font-size: @slide-indicator-width;
 }
 .icon-tasks:before {
 	content: "\e607";
