--- a/frontend/core/src/main/webapp/static/partials/pages/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/tasks/lists.html
@@ -8,7 +8,8 @@
           <ul class="indent">
             <li ng-class="selected" ng-repeat="project in filteredProjects = (tasks | tasksFilter:filterService.activeFilters.project)">
               <a class="text-muted click-to-slide" href ng-click="goToProject($index)">
-                <span class="link-title">{{project.title}}</span><span class="slide-indicator">&gt;</span>
+                <span class="link-title">{{project.title}}</span>
+                <span class="icon-arrow-right" />
               </a>
             </li>
           </ul>
