Moved plus button on omnibar to the right side

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -95,6 +95,7 @@ section#home {
           line-height: 100%;
           button {
             padding-top: 8px; // quick fix to center the plus button
+            margin-right: -6px; // move button all the way to the right side
           }
         }
       }
