task completed fade tweak

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -255,6 +255,7 @@ input[type="checkbox"] + label:before {
 
 input[type="checkbox"]:checked + label:before {
   content: "\e602";
+  .fade-color(0.1s);
 }
 
 // SELECTIONS
