--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -52,6 +52,11 @@ input {
   width: 100%;
 }
 
+button {
+  padding: 0;
+  margin: 0;
+}
+
 // PLACEHOLDER TWEAK 
 
 ::-webkit-input-placeholder { /* WebKit browsers */
