--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -7,10 +7,11 @@ section#login {
   .column {
     overflow-y: auto;
     .banner {
-      img {
-        width: 150px;
-        .center-horizontally;
+      padding-bottom: 20px;
+      span {
+        width: 200px;
         display: block;
+        .center-horizontally;
       }
       // Make content a "sticky footer"
       min-height: 100%;
