--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -1,6 +1,8 @@
 // Baseline
 @horizontal-grid: 30px;
 @vertical-grid: 44px;
+@icon-size: 1.5em;
+@banner-logo-size: 80px;
 
 // Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -40,7 +42,6 @@
 @delete-button: #e22c09;
 @pressed-delete-button: #f86f55;
 @link-color: black;
-
 
 // Components
 @plus-button-width: 27px;
