--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -12,7 +12,7 @@
 [class^="icon-"], [class*=" icon-"] {
 	font-family: 'icomoon';
 	speak: none;
-	font-size: 1.5em;
+	font-size: @icon-size;
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
@@ -64,4 +64,5 @@
 }
 .icon-logo_with_text:before {
 	content: "\e60b";
+	font-size: @banner-logo-size;
 }
