--- a/frontend/core/src/main/webapp/static/partials/pages/login.html
+++ b/frontend/core/src/main/webapp/static/partials/pages/login.html
@@ -2,7 +2,7 @@
   <section id="login" class="one-column-grid fixed-height page">
     <div class="column">
       <div class="banner">
-        <img src="static/img/em_logo_with_text.png" alt="extended mind"/>
+        <span class="icon-logo_with_text" />
       </div>
       <div class="content">
         <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
