--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -1,7 +1,7 @@
 // Baseline
 @horizontal-grid: 30px;
 @vertical-grid: 44px;
-@icon-size: 1.5em;
+@icon-size: 28px;
 @banner-logo-size: 80px;
 
 // Typography
