--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -1,8 +1,11 @@
 // Baseline
 @horizontal-grid: 30px;
 @vertical-grid: 44px;
+
+// icons
 @icon-size: 28px;
 @banner-logo-size: 80px;
+@checkbox-size: 20px;
 
 // Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
