--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -108,6 +108,13 @@ section#home {
   }
 }
 
+// TASKS
+
+input[type="checkbox"]:checked  .task {
+  color:@text-gray;
+  .fade-color(@fade-time);
+}
+
 // TASKS DATES
 
 section#tasks-dates {
