checkbox uses common icon size

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -212,7 +212,7 @@ label {
 
  input[type='checkbox'] + label:before {
    font-family: 'icomoon';
-   font-size: @checkbox-size;
+   font-size: @icon-size;
    padding-right: 10px;
  }
 
