--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -110,7 +110,7 @@ section#home {
 
 // TASKS
 
-input[type="checkbox"]:checked  .task {
+input[type="checkbox"]:checked ~ .task {
   color:@text-gray;
   .fade-color(@fade-time);
 }
