checkbox vertically centered

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -214,6 +214,7 @@ label {
    font-family: 'icomoon';
    font-size: @icon-size;
    padding-right: 10px;
+   vertical-align: middle;
  }
 
  input[type="checkbox"] + label:before {
