Adjusted menu button 3 pixels to the right

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -58,6 +58,7 @@ section#home {
     button#menu-button{
       .button;
       padding: 10px 0 10px 20px; // increased clicking area
+      margin-right: -3px; // aligns menu button to the edge of the column
     }
     button#menu-button:active{
       background-position: 0 0;
