Added active shading to links and collective

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -47,6 +47,9 @@ section#home {
       a.collective{
         color: @text-gray;
       }
+      a.collective:active{
+        color: @active-button;
+      }
     }
     nav {
       max-width: @one-column-grid-width;
