--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -44,6 +44,7 @@
 @delete-button: #e22c09;
 @pressed-delete-button: #f86f55;
 @link-color: black;
+@overdue-task: @delete-button; 
 
 // Components
 @plus-button-width: 27px;
