Removed all note related code. Implementation was lagging too far behind to be useful.

--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemContent.html
@@ -2,7 +2,7 @@
   <div class="item-sorting-container" ng-switch-default>
     <ul class="button-row">
       <li class="button-container left-of-three">
-        <button class="normal-button small-border-right" type="button" ng-click="itemToNote(item)">
+        <button class="normal-button small-border-right" type="button" ng-disabled="true">
           <span class="button-text">note</span>
         </button>
       </li>
