omnibar blue interaction: placeholder text blue until text inputed, after that plus button becomes blue

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -103,14 +103,45 @@ section#home {
             padding-top: 8px; // quick fix to center the plus button
           }
         }
+
+        // Input placeholder browser tweaks
+
+        .input-placeholder {
+          color: @active-button;
+        }
+
+        *::-webkit-input-placeholder {
+          .input-placeholder
+        }    
+        *:-moz-placeholder {
+          /* FF 4-18 */
+          .input-placeholder
+        }
+        *::-moz-placeholder {
+          /* FF 19+ */
+          .input-placeholder
+        }    
+        *:-ms-input-placeholder {
+          /* IE 10+ */
+          .input-placeholder
+        }
+
+        button {
+          color: @active-button;
+        }
+
+        button:disabled {
+          color: @inactive-button;
+        }
       }
-      div#filtered-items-container {
-        height: inherit;
-        overflow-y: auto;
-      }
+    }
+    div#filtered-items-container {
+      height: inherit;
+      overflow-y: auto;
     }
   }
 }
+
 
 // TASKS
 
