--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -34,17 +34,17 @@
 // Colors
 @text-gray: #c9c9ce;
 @inactive-button: @text-gray;
-@active-button: #2a2a2a;
-@pressed-button: #545454;
-// Blue versions:
-// @active-button: #0f82fe;
-// @pressed-button: #00baff;
+// Gray versions
+//@active-button: #2a2a2a;
+//@pressed-button: #545454;
+@active-button: #0f82fe;
+@pressed-button: #00baff;
 @cancel-button: #7e7e7e;
 @pressed-cancel-button: #c9c9ce;
 @delete-button: #e22c09;
 @pressed-delete-button: #f86f55;
 @link-color: black;
-@overdue-task: @delete-button; 
+@overdue-task: @delete-button;
 
 // Components
 @plus-button-width: 27px;
