icon added: left arrow

--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -45,6 +45,9 @@
 .icon-home:before {
 	content: "\e605";
 }
+.icon-arrow-left:before {
+	content: "\e60c";
+}
 .icon-arrow-right:before {
 	content: "\e606";
 	font-size: @slide-indicator-width;
