color shake up: graytone main colors, blue highlight

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -34,11 +34,9 @@
 // Colors
 @text-gray: #c9c9ce;
 @inactive-button: @text-gray;
-// Gray versions
-//@active-button: #2a2a2a;
-//@pressed-button: #545454;
-@active-button: #0f82fe;
-@pressed-button: #00baff;
+@active-button: #2a2a2a;
+@pressed-button: lighten(@active-button, 20%);
+@highlight-button: #0f82fe;
 @cancel-button: #7e7e7e;
 @pressed-cancel-button: #c9c9ce;
 @delete-button: #e22c09;
