bugfix, omnibar "/" -> "or"

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -107,7 +107,7 @@ section#home {
         // Input placeholder browser tweaks
 
         .input-placeholder {
-          color: @active-button;
+          color: @highlight-button;
         }
 
         *::-webkit-input-placeholder {
