dates header to gray color

--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -60,6 +60,12 @@ button {
   margin: 0;
 }
 
+// FONTS
+
+.feature-header {
+  color: @text-gray;
+}
+
 // PLACEHOLDER TWEAK 
 
 ::-webkit-input-placeholder { /* WebKit browsers */
