used lighten() in pressed button colors

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -33,15 +33,15 @@
 
 // Colors
 @text-gray: #c9c9ce;
+@link-color: black;
 @inactive-button: @text-gray;
 @active-button: #2a2a2a;
 @pressed-button: lighten(@active-button, 20%);
 @highlight-button: #0f82fe;
 @cancel-button: #7e7e7e;
-@pressed-cancel-button: #c9c9ce;
+@pressed-cancel-button: lighten(@cancel-button, 20%);
 @delete-button: #e22c09;
-@pressed-delete-button: #f86f55;
-@link-color: black;
+@pressed-delete-button: lighten(@delete-button, 20%);
 @overdue-task: @delete-button;
 
 // Components
