@text-gray now matches the sketch (9.3) brightness

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -32,9 +32,9 @@
 @footer-height: @vertical-grid;
 
 // Colors
-@text-gray: #c9c9ce;
+@text-gray: #919191;
 @link-color: black;
-@inactive-button: @text-gray;
+@inactive-button: #c9c9ce;
 @active-button: #2a2a2a;
 @pressed-button: lighten(@active-button, 20%);
 @highlight-button: #0f82fe;
@@ -48,7 +48,7 @@
 @plus-button-width: 27px;
 @fade-time: 0.2s;
 
-/*
+/* MIKÄ TÄÄ ON?
 @page-padding: 15px;
 @active-color: #428bca;
 @inactive-color: #c6dcef; 
@@ -60,5 +60,4 @@
 @red: #E22C09;
 @green: #4ECE3A;
 @black: #333;
-
 */
