--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -84,7 +84,7 @@
   transition: @fade-time linear;
 }
 
-// GENERAL INPUTS
+// INPUTS
 
 .simple-input {
   outline: none;
@@ -111,6 +111,24 @@
     display:table-cell;
     width: @slide-indicator-width;
     color:@text-gray;
+  }
+}
+
+// Input on the left, button on the right
+
+.left-input-wrapper,.right-button-wrapper{
+  vertical-align: middle;
+}
+.left-input-wrapper {
+  width: 100%;
+  display:table-cell;
+}
+.right-button-wrapper { 
+  display:table-cell;
+  width: @plus-button-width;
+  line-height: 100%;
+  button {
+    padding-top: 4px; // quick fix to center the plus button
   }
 }
 
