--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -32,7 +32,9 @@
 @footer-height: @vertical-grid;
 
 // Colors
-@text-gray: #919191;
+@separator-color: @inactive-text; // not used yet?
+@inactive-text: #919191;
+@active-text: black; // not used yet?
 @link-color: black;
 @inactive-button: #c9c9ce;
 @active-button: #2a2a2a;
