--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -63,20 +63,20 @@ button {
 // FONTS
 
 .feature-header {
-  color: @text-gray;
+  color: @inactive-text;
 }
 
 // PLACEHOLDER TWEAK 
 
 ::-webkit-input-placeholder { /* WebKit browsers */
-    color:    @text-gray;
+    color:    @inactive-text;
 }
 :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color:    @text-gray;
+    color:    @inactive-text;
 }
 ::-moz-placeholder { /* Mozilla Firefox 19+ */
-    color:    @text-gray;
+    color:    @inactive-text;
 }
 :-ms-input-placeholder { /* Internet Explorer 10+ */
-    color:    @text-gray;
+    color:    @inactive-text;
 }
