omnibar onboarding: plus always highlighted, bugfix

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -102,15 +102,19 @@ section#home {
           button {
             padding-top: 8px; // quick fix to center the plus button
           }
+          // onboarding highlight
+          button {
+            color: @highlight-button;
+          }
+        }
       }
-    }
-    div#filtered-items-container {
-      height: inherit;
-      overflow-y: auto;
+      div#filtered-items-container {
+        height: inherit;
+        overflow-y: auto;
+      }
     }
   }
 }
-
 
 // TASKS
 
