omnibar border color change

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -207,7 +207,7 @@ label {
 }  
 
  // Never show default checkbox
-input[type=checkbox] {
+ input[type=checkbox] {
   display:none;
 }
 
@@ -253,6 +253,7 @@ select {
 .top-bottom-borders{
   border-top: solid 2px @inactive-text;
   border-bottom: solid 2px @inactive-text;
+  border-color: @separator;
 }
 
 // SCREEN READERS
