--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -32,7 +32,7 @@
 @footer-height: @vertical-grid;
 
 // Colors
-@separator-color: @inactive-text; // not used yet?
+@separator: #dadada;
 @inactive-text: #919191;
 @active-text: black; // not used yet?
 @link-color: black;
