checkbox color change, refactoring

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -219,7 +219,7 @@ input[type='checkbox'] + label:before {
 }
 
 input[type="checkbox"] + label:before {
-  content: "\e601";
+  .icon-selection-empty;
 }
 
 input[type="checkbox"] + label.overdue:before {
@@ -227,7 +227,7 @@ input[type="checkbox"] + label.overdue:before {
 }
 
 input[type="checkbox"]:checked + label:before {
-  content: "\e602";
+  .icon-selection-checked;
 }
 
 // SELECTIONS
