--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -30,11 +30,13 @@
 .icon-menu:before {
 	content: "\e600";
 }
-.icon-selection-empty:before {
+.icon-selection-empty {
 	content: "\e601";
+	color: @inactive-button;
 }
-.icon-selection-checked:before {
+.icon-selection-checked {
 	content: "\e602";
+	color: @inactive-button;
 }
 .icon-plus:before {
 	content: "\e603";
