top-right plus color change. @inactive-button slighly darkened

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -36,7 +36,7 @@
 @inactive-text: #919191;
 @active-text: black; // not used yet?
 @link-color: black;
-@inactive-button: #c9c9ce;
+@inactive-button: #b0b0b6;
 @active-button: #2a2a2a;
 @pressed-button: lighten(@active-button, 20%);
 @highlight-button: #0f82fe;
