--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -32,6 +32,7 @@
 @footer-height: @vertical-grid;
 
 // Colors
+@logo: #3b3b3b;
 @separator: #dadada;
 @inactive-text: #919191;
 @active-text: black; // not used yet?
