omnibar onboarding bugfix: color class had to have more specific css locator, otherwise it was overridden by common icon color

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -103,8 +103,8 @@ section#home {
             padding-top: 8px; // quick fix to center the plus button
           }
           // onboarding highlight
-          button {
-            color: @highlight-button;
+          [class^="icon-"], [class*=" icon-"] button {
+            color: @highlight-button !important;
           }
         }
       }
