--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -50,6 +50,7 @@
 }
 .icon-arrow-left:before {
 	content: "\e60c";
+	font-size: @slide-indicator-width;
 }
 .icon-arrow-right:before {
 	content: "\e606";
