inbox: note & task button color change

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -94,11 +94,6 @@
   background-image: none;
 }
 
-.inactive-text {
-  color: @inactive-text;
-}
-
-
 .click-to-slide{
   display: table;
   width: 100%;
@@ -267,4 +262,9 @@ select {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
+}
+
+// Temporary classes (to be refactored)
+.inactive-text {
+  color: @inactive-text;
 }
