--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -146,3 +146,12 @@ section#tasks-dates {
     padding-bottom: @footer-height;
   }
 }
+
+// INBOX
+
+button.normal-button.inactive-button{
+  color: white;
+  & {
+    background-color: @inactive-button;
+  }
+}
