multirow list item indent fix

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -147,6 +147,15 @@ section#tasks-dates {
   }
 }
 
+// Indented lists
+section#date {
+  li {
+   list-style-position: inside;
+   text-indent: -44px;
+   padding-left: 44px;
+ }
+}
+
 // INBOX
 
 button.normal-button.inactive-button{
