multirow list item lineheight: BUG: doesn't work as intended

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -153,7 +153,10 @@ section#date {
    list-style-position: inside;
    text-indent: -44px;
    padding-left: 44px;
- }
+   span {
+    line-height: 100%;
+  }
+}
 }
 
 // INBOX
