Pressing plus button on omnibar now opens new item edit screen

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -120,7 +120,7 @@
 }
 .right-button-wrapper { 
   display:table-cell;
-  width: @plus-button-width;
+  width: @icon-button-width;
   line-height: 100%;
   button {
     padding-top: 4px; // quick fix to center the plus button
