--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -50,6 +50,7 @@
 // Components
 @plus-button-width: 27px;
 @fade-time: 0.2s;
+@icon-button-width: @plus-button-width;
 
 /* MIKÄ TÄÄ ON?
 @page-padding: 15px;
