Added small margin to prevent arrow from touching scrollbar

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -308,3 +308,13 @@ select {
 .inactive-text {
   color: @inactive-text;
 }
+
+// LISTS
+
+.list-arrow-right {
+  span.icon-arrow-right {
+    // Add small margin to prevent arrow from touching scrollbar
+    // on desktop
+    margin-right:5px;
+  }
+}
