Removed duplicate onboarding definition

--- a/frontend/core/src/main/webapp/static/less/onboarding.less
+++ b/frontend/core/src/main/webapp/static/less/onboarding.less
@@ -1,4 +1,1 @@
-   // omnibar plus
-  #main-content-container .content [class^="icon-"], [class*=" icon-"] button {
-    color: @highlight-button !important;
-  }
+   // TODO: Add onboarding LESS here
