--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -20,6 +20,19 @@
 
 // HORIZONTAL LAYOUT
 
+.left-of-two {
+  float:left;
+  width: 50%;
+  .small-border-right:after{
+    margin-left: 12%;
+  }
+}
+.right-of-two {
+  float:right;
+  width: 50%;
+  text-align: right;
+}
+
 .left-of-three {
   float:left;
   width: 33.33%;
