Better buttons formatting

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -331,3 +331,13 @@ select {
     margin-right:5px;
   }
 }
+
+// FORMS
+
+.form-group, .input-group {
+  width: 100%;
+  select, input {
+    width:inherit;
+  }
+}
+
