--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -10,6 +10,11 @@
   padding-left: @horizontal-grid;
 }
 
+ul.indent {
+  // TODO: Remove this when taskActions are printed better
+  padding-left: @horizontal-grid + 10px;
+}
+
 div[role=main] {
   line-height: @vertical-grid;
   max-height: @maximum-height;
