--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -84,3 +84,16 @@ textarea {
 :-ms-input-placeholder { /* Internet Explorer 10+ */
     color:    @inactive-text;
 }
+
+// SCROLLBARS
+
+::-webkit-scrollbar {
+  width: 4px;
+  background: white;
+}
+::-webkit-scrollbar-thumb {
+  background: @inactive-button;
+}
+::-webkit-scrollbar-corner {
+  background: white;
+}
