Refactored controllers, other small fixes

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -70,8 +70,8 @@ header {
   padding-right: inherit;
 }
 
-.feature-header {
-  min-height: @feature-header-height;
+.page-header {
+  min-height: @page-header-height;
   .left-of-three {
     width: 20%;
   }
@@ -89,11 +89,11 @@ header {
 
 // CONTENT
 
-.feature-content-container {
+.page-content-container {
   height:inherit;
-  padding-top: @feature-header-height;
+  padding-top: @page-header-height;
   padding-bottom: @footer-height;
-  .inner-feature-content-container {
+  .inner-page-content-container {
     height:inherit;
     position:relative;
     overflow-y: auto;
