--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -25,7 +25,7 @@
 
 // Headers
 @main-header-height: 60px;
-@feature-header-height: 60px;
+@page-header-height: 60px;
 @heading-header-height: 60px;
 
 // Footer
