completed task fade now works with accordion

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -107,7 +107,7 @@ section#home {
 
 // TASKS
 
-input[type="checkbox"]:checked ~ .task {
+input[type="checkbox"]:checked ~ a#accordionTitleLink {
   color:@inactive-text;
   .fade-color(@fade-time);
 }
