inbox item top&bottom borders

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -144,3 +144,13 @@ button.normal-button.inactive-button{
     background-color: @inactive-button;
   }
 }
+
+// When item open, show top&bottom borders
+.accordion-item-active {
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: @separator;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
