dates: multirow items line-height fixed

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -112,6 +112,14 @@ input[type="checkbox"]:checked ~ a#accordionTitleLink {
   .fade-color(@fade-time);
 }
 
+// DATES
+
+section#date {
+  a#accordionTitleLink {
+    line-height: normal;
+  }
+}
+
 // TASKS DATES
 
 section#tasks-dates {
